# CarbonCAM

./: .dockerignore  .env.example  .gitignore  .npmrc  .vercelignore  DESIGN_IMPROVEMENTS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.web  LICENSE  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  dependency-review.yml  deploy.yml
api/: index.py
carboncam_engine/: email_service.py  machining.py
carboncam_engine/email_templates/: quota_alert.html  report_ready.html  welcome.html
docs/: ARCHITECTURE.md  CRISP_CHAT_SETUP.md  api-access.md  sentry.md
supabase/: seed.sql
supabase/migrations/: 20260102120000_init_carboncam_schema.sql  20260103090000_add_max_power_kw_to_machines.sql  20260103130000_add_users_credits.sql  20260103160000_asset_library_companies_and_custom_assets.sql  20260103180000_add_electricity_rates.sql  20260103193000_add_api_keys.sql  20260103213000_add_audit_logs.sql  20260103224500_audit_logs_company_actor.sql
web/: .prettierrc  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.config.js  sentry.server.config.ts  tsconfig.json  vercel.json
web/app/: crisp-chat.tsx  globals.css  language-switcher.tsx  layout.tsx  not-found.tsx  sentry-user-context.tsx
web/app/(auth)/: layout.tsx
web/emails/: export.mjs
web/i18n/: request.ts  routing.ts
web/locales/: de.json  en.json  tr.json
web/public/: robots.txt  site.webmanifest
web/scripts/: init-db.ts  update-calculations.ts
(+59 files in other folders)
